add : white list

--- a/gateway-common/build.gradle
+++ b/gateway-common/build.gradle
@@ -3,4 +3,5 @@ jar.enabled = true
 
 dependencies {
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 }
